# learn-opengl

./: .gitignore  CMakeLists.txt  main.cpp  test_glm.cpp  test_light.cpp  test_model.cpp
include/: file.h  shader.h
resources/shaders/: draw_texture.fs  lighting.object.fs  lighting.object.vs
src/: test_draw_texture.cpp  test_draw_triangle.cpp  test_light.cpp
